# porth-cpp

./: .clang-format  .editorconfig  .gitignore  .gitmodules  CMakeLists.txt  config.hpp.cin
.github/workflows/: cmake.yml
examples/: .gitignore  foo.porth  rule110.porth  seq100.porth  test.porth  while.porth
modules/: .tokeignore
modules/iota/include/iota/: iota.hpp
modules/iota/source/: iota.cpp
modules/iota_driver/source/: main.cpp
modules/porth/include/porth/: builtin_words.hpp  com.hpp  lexer.hpp  mem.hpp  op.hpp  parse_error.hpp  semantic_error.hpp  sim.hpp  simulation_error.hpp
modules/porth/iota/: op_id.iota  token_id.iota
modules/porth/source/: com.cpp  lexer.cpp  main.cpp  op.cpp  parse_error.cpp  semantic_error.cpp  sim.cpp  simulation_error.cpp
modules/porth_test/source/: main.cpp
modules/ranges/include/ranges/: ranges.hpp
modules/span/include/span/: span.hpp
modules/subprocess_h/include/subprocess/: destroy_guard.hpp
modules/subprocess_h_cpp/include/subprocess/: destroy_guard.hpp
tests/: .gitignore  01-arithmetic.porth  01-stack.porth  01-stack.txt  02-comparison.porth  02-comparison.txt  03-arithmetic.porth  04-memory.porth  05-hello-world.porth  arithmetic.porth  bitwise.porth  comparison.porth  control-flow.porth  memory.porth  stack.porth  stack.txt  test.sh
